code25_all/scala/11909970.txt
scala> def printArgs(str:String = "default"){println(str)}
printArgs: (str: String)Unit

scala> printArgs
<console>:11: error: missing arguments for method printArgs in object $iw;
follow this method with '_' if you want to treat it as a partially applied function
              printArgs
              ^

